# cryptotensors

./: .gitignore  Dockerfile.s390x.test  FORMAT.md  KEY_MANAGEMENT_GUIDE.md  NOTICE  README.md  VERSION_BINDING.md  index.html
.github/workflows/: check-safetensors-release.yml  integration-tests.yml  python-bench.yml  python-release.yml  python.yml  rust-release.yml  rust.yml
bindings/compatible/: LICENSE  pyproject.toml
bindings/compatible/py_src/safetensors/: __init__.py  flax.py  mlx.py  numpy.py  paddle.py  tensorflow.py  torch.py
bindings/python/: Cargo.toml  README.md  build.rs  pyproject.toml
bindings/python/benches/: conftest.py  test_flax_crypto.py  test_mlx_crypto.py  test_numpy_crypto.py  test_paddle_crypto.py  test_pt_crypto.py  test_tf_crypto.py
bindings/python/py_src/cryptotensors/: __init__.py  __init__.pyi  flax.py  mlx.py  numpy.py  paddle.py  tensorflow.py  torch.py
bindings/python/py_src/safetensors/: __init__.py
bindings/python/src/: lib.rs
bindings/python/tests/: crypto_utils.py  test_crypto_config.py  test_crypto_config_integration.py  test_crypto_flax.py  test_crypto_mlx.py  test_crypto_numpy.py  test_crypto_paddle.py  test_crypto_pt.py  test_crypto_tf.py  test_explicit_config_flax.py  test_explicit_config_mlx.py  test_explicit_config_numpy.py  test_explicit_config_paddle.py  test_explicit_config_tensorflow.py  test_explicit_config_torch.py  test_registry.py  utils_explicit_config.py
dev/bench/: data.js
docs/source/: _toctree.yml  index.mdx  vllm-safetensors-loading.md
docs/source/api/: flax.mdx  numpy.mdx  paddle.mdx  tensorflow.mdx  torch.mdx
docs/source/crypto/: encryption.mdx  examples.mdx  key_management.mdx  policy.mdx  signing.mdx
integration-tests/: .gitignore  Dockerfile.transformers  README.md  run_tests.sh
integration-tests/scripts/: __init__.py  convert_and_save.py  convert_model.py  load_and_test.py  run_full_test.py
integration-tests/utils/: __init__.py  print_metadata.py  write_jwk.py
safetensors/: Cargo.toml
safetensors/benches/: benchmark.rs
safetensors/src/: cryptotensors.rs  encryption.rs  key.rs  lib.rs  memory.rs  policy.rs  registry.rs  signing.rs  tensor.rs
scripts/: merge_bench_results.py
