[project]
name = 'safetensors'
requires-python = '>=3.8'
description = 'A safetensors adapter layer for cryptotensors, to avoid package requirements errors.'
version = '0.7.0'
authors = [
    {name = 'Aiyah Meloken', email = 'aiyah_meloken@protonmail.com'}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
license = { file = "LICENSE" }
dynamic = [
    'readme',
]

dependencies = [
    "cryptotensors>=0.1.0"
]

[project.urls]
Homepage = 'https://github.com/aiyah-meloken/cryptotensors'
Source = 'https://github.com/aiyah-meloken/cryptotensors'
Documentation = 'https://aiyah-meloken.github.io/cryptotensors/'

[project.optional-dependencies]
numpy = ["numpy>=1.21.6"]
torch = [
    "safetensors[numpy]",
    "torch>=1.10",
]
tensorflow = [
    "safetensors[numpy]",
    "tensorflow>=2.11.0",
]
jax = [
    "safetensors[numpy]",
    "flax>=0.6.3",
    "jax>=0.3.25",
    "jaxlib>=0.3.25",
]
mlx = [
    "mlx>=0.0.9",
]
paddlepaddle = [
    "safetensors[numpy]",
    "paddlepaddle>=2.4.1",
]
quality = [
    "black>=22.3",
    "isort>=5.5.4",
    "flake8>=3.8.3",
]
testing = [
    "safetensors[numpy]",
    "h5py>=3.7.0",
    "huggingface_hub>=0.12.1",
    "setuptools_rust>=1.5.2",
    "pytest>=7.2.0",
    "pytest-benchmark>=4.0.0",
    "hypothesis>=6.70.2",
]
all = [
    "safetensors[torch]",
    "safetensors[numpy]",
    "safetensors[tensorflow]",
    "safetensors[jax]",
    "safetensors[paddlepaddle]",
    "safetensors[quality]",
    "safetensors[testing]",
]
dev = [
    "safetensors[all]",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
readme = {file = ["README.md"]}

[tool.setuptools.packages.find]
where = ["py_src"]
include = ["safetensors*"]

