# MODIFICATION: Package renamed from safetensors-python to cryptotensors-python
# Added extension-module feature for Python bindings

[package]
name = "cryptotensors-python"
version = "0.2.2"
edition = "2021"
rust-version = "1.80"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "safetensors_rust"
crate-type = ["cdylib"]

[features]
default = ["modern"]
legacy = ["pyo3/abi3-py38"]
modern = ["pyo3/abi3-py311"]

[dependencies]
pyo3 = { version = "0.25", features = ["abi3", "extension-module"] }
memmap2 = "0.9"
serde_json = "1.0"

[dependencies.cryptotensors]
path = "../../safetensors"
[build-dependencies]
pyo3-build-config = "0.25"

